--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,34 +1,72 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  background-color: #e4e5f7;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: 700;
+  color: #e3e3f0;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
+.mr-auto {
+  font-size: 14px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: rgb(59, 56, 56);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.userProfileLink {
+  width: 100px;
+  text-align: center;
+  padding-top: 30px;
+ }
+
+ .userProfileLink a{
+ color: #9df1ff;
+ }
+
+.homeLink {
+  width: 100px;
+  text-align: center;
+  padding-top: 30px;
+}
+
+.localLink {
+  width: 100px;
+  text-align: center;
+  padding-top: 30px;
+}
+
+.natLink {
+  width: 100px;
+  text-align: center;
+  padding-top: 30px;
+}
+
+.worldLink {
+  width: 100px;
+  text-align: center;
+  padding-top: 30px;
+}
+
+.sportsLink {
+  width: 100px;
+  text-align: center;
+  padding-top: 30px;
+}
+
+.weatherLink {
+  width: 100px;
+  text-align: center;
+  padding-top: 30px;
 }
 
 h1 {
@@ -36,34 +74,10 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
 button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
