--- a/client/src/index.css
+++ b/client/src/index.css
@@ -141,6 +141,11 @@ h4 {
   padding-right: 40px;
 }
 
+.article {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
 .itemCard {
   background-color: #f9f9f9;
   border: 1px solid #ddd;
