--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,15 +37,43 @@ a:focus {
 .navbar {
   position: fixed;
   top: 0;
-  width: 100%; /* Ensure the navbar spans the entire width */
-  z-index: 1000; /* Set a high z-index to ensure it appears above other content */
-  /* Add any other styling you need for the navbar */
-}
+  width: 100%; 
+  z-index: 1000; 
+ }
 
 .userProfileLink {
   width: 100px;
   text-align: center;
   padding-top: 30px;
+ }
+.profileMainDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+ .userProfileDisplay{
+  display: flex;
+  flex-direction: column;
+  
+  align-items: center;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  padding: 10px;
+  list-style: none;
+  width: 500px;
+  height: auto;
+  
+ }
+
+ label {
+  text-align: center;
+  padding: 5px;
+ }
+
+ .teamList {
+  text-align: center;
  }
 
  .userProfileLink a{
