--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,6 +72,28 @@ a:focus {
   
  }
 
+ .image {
+
+  max-width: 500px;
+  max-height: 500px;
+  padding-top: 5px;
+  padding-left: 40px;
+  padding-right: 40px;
+
+ }
+
+ .imageDiv {
+ 
+  background-color: gray;
+
+ }
+
+ .readMore {
+  padding-top: 5px;
+  padding-left: 40px;
+  padding-right: 40px;
+  color: blue;
+ }
  label {
   text-align: center;
   padding: 5px;
@@ -186,17 +208,17 @@ h4 {
   padding-right: 40px;
 }
 .published{
-  font-size: 12px;
+  font-size: 14px;
   padding-left: 40px;
   padding-right: 40px;
 }
 .source{
-  font-size: 12px;
+  font-size: 14px;
   padding-left: 40px;
   padding-right: 40px;
 }
 .author{
-  font-size: 12px;
+  font-size: 14px;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -207,6 +229,10 @@ h4 {
 }
 
 .itemCard {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 8px;
