--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,6 @@ body {
   background-color: #e4e5f7;
 }
 
-
 a {
   font-weight: 700;
   color: #e3e3f0;
@@ -57,6 +56,7 @@ a:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #e4e5f7;
 }
 
 .userProfileDisplay {
@@ -72,23 +72,18 @@ a:focus {
   list-style: none;
   width: 500px;
   height: auto;
-
 }
 
 .image {
-
   max-width: 500px;
   max-height: 500px;
   padding-top: 5px;
   padding-left: 40px;
   padding-right: 40px;
-
 }
 
 .imageDiv {
-
   background-color: gray;
-
 }
 
 .readMore {
@@ -174,7 +169,50 @@ h1 {
 .locationP {
   padding: 5px;
 }
+.signupFlex {
+  display: flex;
+  flex-direction: column;
+}
 
+.signUpButton {
+  width: 100px;
+  align-self: center;
+  margin: 15px;
+}
+
+.signUpFont {
+  font-size: 15px;
+}
+
+.registrationFont {
+  padding-top: 20px;
+  padding-bottom: 5px;
+}
+
+label {
+  padding: 10px;
+  font-size: 18px;
+}
+
+.signInButton {
+  margin: 5px;
+  width: 60px;
+}
+
+.articleLink {
+  color: blue;
+}
+
+.worldNewsPic {
+  max-width: 500px;
+  max-height: 500px;
+  align-self: center;
+}
+
+.passwordFont {
+  font-size: 15px;
+  padding-top: 10px;
+}
 button:hover {
   border-color: #646cff;
 }
@@ -196,6 +234,8 @@ h3 {
 
 h4 {
   font-size: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -212,6 +252,7 @@ h4 {
 .description {
   font-size: 15px;
   padding-top: 5px;
+
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -235,6 +276,8 @@ h4 {
 }
 
 .article {
+  padding-top: 20px;
+  padding-bottom: 20px;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -247,26 +290,24 @@ h4 {
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 8px;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
   padding: 10px;
   list-style: none;
+  border-style: inset;
 }
 
 .pageTitle {
   font-size: 20px;
   padding: 5px;
   text-align: center;
-
 }
 
 .large-article {
-
   width: auto;
   height: auto;
 }
 
 .small-article {
-
   width: 50%;
   height: 50%;
 }
