--- a/client/src/pages/SportsNews/Sport.css
+++ b/client/src/pages/SportsNews/Sport.css
@@ -23,7 +23,24 @@
     display: flex;
     flex-direction: column;
 }
+.sportsNav {
+    display: flex;
+    width: 93%;
+    justify-content: space-around;
+    position: fixed;
+    font-size: 14px;
+    background-color: rgb(165, 162, 162);
+    border: 2px solid black;
+    margin: -7px;    
+}
 
+
+
+.latestSportsHeader {
+    margin-top: 40px;
+    margin-bottom: 15px;
+   
+}
 .news-container {
     margin: 20px;
     padding: 20px;
