--- a/client/src/index.css
+++ b/client/src/index.css
@@ -252,7 +252,14 @@ h4 {
 .inputLabel {
   padding-left: 40px;
   padding-right: 10px;
-}
+  }
+
+ .countryCode {
+  padding-bottom: 20px;
+  text-align: center;
+
+ 
+ }
 
 .loading {
   padding-left: 40px;
