--- a/client/src/index.css
+++ b/client/src/index.css
@@ -316,3 +316,35 @@ h4 {
   width: 50%;
   height: 50%;
 }
+
+.stocksFeed {
+  background-color: #e4e5f7;
+  padding-top: 20px;
+  padding-bottom: 100px;
+}
+
+.eachStockResult {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  margin: 20px;
+  background-color: #e4e5f7;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 10px;
+  border-style: inset;
+  background-image: url("imageDivBackground.jpg");
+}
+
+.eachStockResult div {
+  margin: 5px;
+
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-top: -10px;
+  background-color: #f9f9f9;
+}
