--- a/client/src/pages/SportsNews/Sport.css
+++ b/client/src/pages/SportsNews/Sport.css
@@ -84,3 +84,7 @@
     /* Add padding for the scrollbar to avoid content cutoff */
     /* You can customize the styles further as needed */
 }
+
+.copyLinkButton {
+    
+}
