--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,7 +33,7 @@ a:focus {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  background-color: rgb(59, 56, 56);
+
   align-items: center;
 
   flex-wrap: wrap;
@@ -43,6 +43,7 @@ a:focus {
   position: fixed;
   top: 0;
   width: 100%;
+  height: 20%;
   z-index: 1000;
 }
 
@@ -52,24 +53,25 @@ a:focus {
 }
 
 .pageTitle {
-  font-size: 20px;
-  padding: 5px;
+  font-size: 25px;
+  border: 2px solid black;
+  max-width: 395px;
+  border-radius: 8px;
   text-align: center;
   align-content: center;
-  border-radius: 8px;
+  background-color: #f9f9f9;
 }
 .profileMainDiv {
   margin: auto;
-  margin-top: 50px;
-  background-color: #f9f9f9;
-  max-width: 387px;
+  padding-top: 50px;
+  margin-bottom: 50px;
+  background-color: #e4e5f7;
+
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   align-content: center;
-  border: 1px solid black;
-  border-radius: 8px;
 }
 
 .userProfileDisplay {
@@ -90,6 +92,7 @@ a:focus {
   max-width: 500px;
   max-height: 500px;
   padding-top: 5px;
+  padding-bottom: 5px;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -186,11 +189,14 @@ h1 {
 }
 
 .newsFeed {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
   margin: 10px;
-
   padding-top: 30px;
+}
+
+.newsFeed1 {
+  padding-top: 50px;
 }
 
 .usernameP {
@@ -205,12 +211,11 @@ h1 {
   flex-direction: column;
   align-items: flex-end;
 
-  width: 375px;
-  padding-right: 20px;
+  max-width: 400px;
 }
 
 .signUpButton {
-  width: 100px;
+  min-width: px;
   align-self: center;
   margin: 15px;
   margin-left: 50px;
@@ -221,7 +226,7 @@ h1 {
 }
 
 label {
-  padding: 10px;
+  padding: 5px;
   font-size: 17px;
   text-align: center;
 }
@@ -235,7 +240,7 @@ label {
 
 .signInButton {
   margin: 5px;
-  width: 60px;
+  min-width: 60px;
   margin-right: 22px;
 }
 
@@ -274,10 +279,7 @@ h3 {
 
 h4 {
   font-size: 20px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-top: 10px;
 }
 
 .inputLabel {
