--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,6 +54,14 @@ a:focus {
 
 .pageTitle {
   font-size: 25px;
+ 
+ 
+  text-align: center;
+  align-content: center;
+}
+
+.pageTitleUser {
+  font-size: 25px;
   border: 2px solid black;
   max-width: 395px;
   border-radius: 8px;
@@ -65,7 +73,7 @@ a:focus {
   margin: auto;
   padding-top: 50px;
   margin-bottom: 50px;
-  background-color: #e4e5f7;
+ background-color: #e4e5f7;
 
   display: flex;
   flex-direction: row;
