--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,11 +33,11 @@ a:focus {
   font-size: 14px;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-
+  justify-content: center;
+align-content: center;
   align-items: center;
-
   flex-wrap: wrap;
+
 }
 
 .navbar {
