--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,35 +29,49 @@ a:focus {
   text-align: center;
   padding: 5px;
 }
-
+.container {
+  display: flex;
+  flex-direction: row;
+  
+}
 .mr-auto {
   font-size: 14px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
 align-content: center;
   align-items: center;
   flex-wrap: wrap;
-
 }
 
 .navbar {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 20%;
+  height: auto;
   z-index: 1000;
 }
 
+.mr-auto.navbar-nav {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
 .userProfileLink {
   width: 100px;
   text-align: center;
 }
 
+.pageTitleHome {
+  padding-top: 10px;
+  font-size: 25px; 
+  text-align: center;
+  align-content: center;
+}
+
 .pageTitle {
-  font-size: 25px;
- 
- 
+  padding-top: 10px;
+  font-size: 25px; 
   text-align: center;
   align-content: center;
 }
@@ -386,6 +400,7 @@ h4 {
   background-color: #e4e5f7;
   padding-top: 20px;
   padding-bottom: 100px;
+  margin-top: 30px;
 }
 
 .eachStockResult {
@@ -393,11 +408,11 @@ h4 {
   flex-wrap: wrap;
   text-align: center;
   justify-content: center;
-  margin: 20px;
+  margin: 20px; 
   background-color: #e4e5f7;
   border: 1px solid #ddd;
   border-radius: 8px;
-  padding: 10px;
+  padding: 50px;
   border-style: inset;
   background-image: url("imageDivBackground.jpg");
 }
