--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,17 +29,19 @@ a:focus {
   text-align: center;
   padding: 5px;
 }
+
 .container {
   display: flex;
   flex-direction: row;
-  
+
 }
+
 .mr-auto {
   font-size: 14px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-align-content: center;
+  align-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -57,6 +59,7 @@ align-content: center;
   justify-content: space-evenly;
   width: 100%;
 }
+
 .userProfileLink {
   width: 100px;
   text-align: center;
@@ -64,14 +67,14 @@ align-content: center;
 
 .pageTitleHome {
   padding-top: 10px;
-  font-size: 25px; 
+  font-size: 25px;
   text-align: center;
   align-content: center;
 }
 
 .pageTitle {
   padding-top: 10px;
-  font-size: 25px; 
+  font-size: 25px;
   text-align: center;
   align-content: center;
 }
@@ -85,14 +88,14 @@ align-content: center;
   align-content: center;
   background-color: #f9f9f9;
 }
+
 .profileMainDiv {
   margin: auto;
   padding-top: 50px;
   margin-bottom: 50px;
- background-color: #e4e5f7;
-
+  background-color: #e4e5f7;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   align-content: center;
@@ -100,7 +103,7 @@ align-content: center;
 
 .userProfileDisplay {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
@@ -108,7 +111,7 @@ align-content: center;
   margin-bottom: 10px;
   padding: 10px;
   list-style: none;
-  width: 500px;
+  width: 90%;
   height: auto;
 }
 
@@ -130,12 +133,13 @@ align-content: center;
   padding-top: 5px;
   padding-left: 40px;
   padding-right: 40px;
-   color: blue;
+  color: blue;
 }
 
-.article-link{
+.article-link {
   margin: 1px;
 }
+
 .teamList {
   text-align: center;
   padding: 5px;
@@ -168,9 +172,11 @@ align-content: center;
   padding: 2px;
   margin: 5px;
 }
+
 .userProfileLink a {
   color: #9df1ff;
 }
+
 .css-4xgw5l-IndicatorsContainer2 {
   font-size: 13px;
 
@@ -180,6 +186,7 @@ align-content: center;
 .css-13cymwt-control {
   font-size: 13px;
 }
+
 .homeLink {
   width: 100px;
   text-align: center;
@@ -217,7 +224,7 @@ h1 {
 
 .newsFeed {
   padding-left: 5px;
-  
+
   margin: 10px;
   padding-top: 30px;
 }
@@ -234,6 +241,7 @@ h1 {
 .locationP {
   padding: 5px;
 }
+
 .signupFlex {
   display: flex;
   flex-direction: column;
@@ -258,6 +266,7 @@ label {
   font-size: 17px;
   text-align: center;
 }
+
 .copyLinkButton {
   max-width: 80px;
   padding: 2px;
@@ -286,6 +295,7 @@ label {
   font-size: 15px;
   padding-top: 10px;
 }
+
 button:hover {
   border-color: #646cff;
 }
@@ -408,7 +418,7 @@ h4 {
   flex-wrap: wrap;
   text-align: center;
   justify-content: center;
-  margin: 20px; 
+  margin: 20px;
   background-color: #e4e5f7;
   border: 1px solid #ddd;
   border-radius: 8px;
