--- a/client/src/pages/Weather/Weather.css
+++ b/client/src/pages/Weather/Weather.css
@@ -43,7 +43,8 @@ p {
   min-width: 30%;
   background: linear-gradient(135deg, #00feba, #5b548a);
   text-align: center;
-  margin: 100px auto 0;
+  align-items: center;
+  margin: 50px auto 50px;
   border-radius: 20px;
   padding: 40px 35px;
   color: #fff;
