--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,7 +63,7 @@ align-content: center;
 
 .mr-auto.navbar-nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: 100%;
 }
 .userProfileLink {
