added the state selection css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -388,7 +388,7 @@ h4 {
   height: 50%;
 }
 
-.faveTeams {
+.faveTeams, .stateSelection {
   display: flex;
   align-items: center;
   font-size: 16px;
