--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@ body {
 :root {
   display: flex;
   flex-direction: column;
- 
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: #e4e5f7;
 }
@@ -27,24 +27,21 @@ a:focus {
   color: gold;
 }
 
-
 .randomQuote {
   text-align: center;
   font-style: italic;
   padding-top: 5px;
-  
 }
 .container {
   display: flex;
   flex-direction: row;
-  
 }
 .mr-auto {
   font-size: 14px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-align-content: center;
+  align-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -58,7 +55,7 @@ align-content: center;
 }
 .navbar-nav {
   display: flex;
- 
+
   align-items: center;
   flex-wrap: wrap;
 }
@@ -74,15 +71,13 @@ align-content: center;
 }
 
 .pageTitleHome {
- 
-  font-size: 25px; 
+  font-size: 25px;
   text-align: center;
   align-content: center;
 }
 
 .pageTitle {
-
-  font-size: 25px; 
+  font-size: 25px;
   text-align: center;
   align-content: center;
 }
@@ -100,7 +95,7 @@ align-content: center;
   margin: auto;
   padding-top: 30px;
   margin-bottom: 50px;
- background-color: #e4e5f7;
+  background-color: #e4e5f7;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -132,18 +127,17 @@ align-content: center;
 .imageDiv {
   background-color: gray;
   background-image: url("imageDivBackground.jpg");
- width: 100%;
-
+  width: 100%;
 }
 
 .readMore {
   padding-top: 5px;
   padding-left: 40px;
   padding-right: 40px;
-   color: blue;
+  color: blue;
 }
 
-.article-link{
+.article-link {
   margin: 1px;
 }
 .teamList {
@@ -183,7 +177,6 @@ align-content: center;
 }
 .css-4xgw5l-IndicatorsContainer2 {
   font-size: 13px;
-
   align-items: center;
 }
 
@@ -227,7 +220,6 @@ h1 {
 
 .newsFeed {
   padding-left: 5px;
-  
   margin: 10px;
   padding-top: 30px;
 }
@@ -244,11 +236,11 @@ h1 {
 .locationP {
   padding: 5px;
 }
+
 .signupFlex {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-
   max-width: 400px;
 }
 
@@ -268,7 +260,6 @@ label {
   font-size: 17px;
   text-align: center;
 }
-
 
 .copyLinkButton {
   border-style: ridge;
@@ -323,7 +314,6 @@ h3 {
 h4 {
   font-size: 20px;
   font-weight: bold;
-
 }
 
 .inputLabel {
@@ -403,7 +393,8 @@ h4 {
   height: 50%;
 }
 
-.faveTeams, .stateSelection {
+.faveTeams,
+.stateSelection {
   display: flex;
   align-items: center;
   font-size: 16px;
@@ -423,8 +414,8 @@ h4 {
   flex-wrap: wrap;
   text-align: center;
   justify-content: center;
-  margin-left: 20px; 
-  margin-right: 20px; 
+  margin-left: 20px;
+  margin-right: 20px;
   background-color: #e4e5f7;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -441,6 +432,6 @@ h4 {
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
- 
+
   background-color: #f9f9f9;
 }
