--- a/client/src/pages/Weather/Weather.css
+++ b/client/src/pages/Weather/Weather.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'poppins', sans-serif;
+  font-size: 90%;
 
 }
 
@@ -38,13 +39,13 @@ p {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 90%;
-  max-width: 65%;
-  min-width: 30%;
+  width: 60%;
+
+ height: 70%;
   background: linear-gradient(135deg, #00feba, #5b548a);
   text-align: center;
   align-items: center;
-  margin: 50px auto 50px;
+  margin: 5% auto 5%;
   border-radius: 20px;
   padding: 40px 35px;
   color: #fff;
@@ -87,8 +88,9 @@ body{
   background: #ebfffc;
   flex: 1;
   margin-right: 16px;
-  font-size: 20px;
+  font-size: 80%;
   border-radius: 20px;
+  max-width: 70%;
   height: 60px;
   padding: 10px 25px;
 }
@@ -114,15 +116,18 @@ body{
 
 .city-details{
     display: flex;
+    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between; 
    padding: 0 20px;
    margin-top:50px ;
+   max-width: 100%;
 }
 
 .col{
     display: flex;
     align-items: center;
+    font-size: 2rem;
     text-align: left;
 }
 .humidity, .wind {
