--- a/client/src/index.css
+++ b/client/src/index.css
@@ -96,7 +96,8 @@ a:focus {
   margin-bottom: 50px;
   background-color: #e4e5f7;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   align-content: center;
@@ -110,17 +111,42 @@ a:focus {
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 8px;
-  margin-bottom: 10px;
+  margin-bottom: px;
   padding: 10px;
   list-style: none;
-  width: 50%;
+  width: auto;
   height: auto;
 }
 
+.stateProfileInput {
+  display: flex; 
+  align-items: center;
+  justify-content: space-between;
+  width: 190px;
+}
 .image {
   max-width: 50%;
   max-height: 40%;
   padding: 1%;
+}
+.profilePageTitle {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  color: navy;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.usernameP {
+  margin-bottom: 1px;
+}
+
+.locationP {
+  margin-bottom: 1px;
+}
+
+.teamList {
+  margin-bottom: 1px;
 }
 
 .imageDiv {
@@ -143,34 +169,55 @@ a:focus {
   text-align: center;
   padding: 5px;
 }
+.signUpButton {
+  align-self: center;
+  margin: 15px;
+  margin-left: 50px;
+}
+
+.signInButton {
+  margin: 5px;
+  min-width: 60px;
+  margin-right: 22px;
+}
+
+.signOutButton {
+  font-size: 12px;
+  padding: 2px;
+  width: 60px;
+  margin: 10px;
+}
 
 .editButton {
-  font-size: 13px;
-  width: 20%;
+  font-size: 12px;
+  width: 100px;
   padding: 2px;
   margin: 5px;
 }
 
 .deleteButton {
-  font-size: 13px;
+  font-size: 12px;
   width: 100px;
   padding: 2px;
   margin: 5px;
+  background-color: rgb(126, 30, 30);
 }
 
 .saveButton {
   font-size: 13px;
-  width: 100px;
+  width: 50px;
   padding: 2px;
   margin: 5px;
 }
 
 .backButton {
   font-size: 13px;
-  width: 100px;
+  width: 50px;
   padding: 2px;
-  margin: 5px;
+  margin: 2px;
 }
+
+
 .userProfileLink a {
   color: #9df1ff;
 
@@ -259,13 +306,6 @@ h1 {
   max-width: 400px;
 }
 
-.signUpButton {
-  min-width: px;
-  align-self: center;
-  margin: 15px;
-  margin-left: 50px;
-}
-
 .signUpFont {
   font-size: 15px;
 }
@@ -285,12 +325,6 @@ label {
   align-self: center;
   margin: 5px;
   margin-bottom: 0px;
-}
-
-.signInButton {
-  margin: 5px;
-  min-width: 60px;
-  margin-right: 22px;
 }
 
 .articleLink {
@@ -408,20 +442,22 @@ h4 {
   height: 50%;
 }
 
-.faveTeams,
-.stateSelection {
+.faveTeams {
   display: flex;
   align-items: center;
   font-size: 16px;
   justify-content: space-between;
-  width: 300px;
+  width: 273px;
+}
+
+.nameProfile {
+  margin-bottom: 0px;
 }
 
 .stocksFeed {
   background-color: #e4e5f7;
   padding-top: 20px;
   padding-bottom: 20px;
- 
 }
 
 .eachStockResult {
