--- a/client/src/pages/Weather/Weather.css
+++ b/client/src/pages/Weather/Weather.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   width: 50%; 
+  max-width: 550px;
   padding: 20px;
   background: linear-gradient(135deg, #00feba, #5b548a);
   text-align: center;
