--- a/client/src/index.css
+++ b/client/src/index.css
@@ -162,7 +162,7 @@ a:focus {
 
 .imageDiv {
   background-color: gray;
-  background-image: url("imageDivBackground.jpg");
+  background-image: url("/imageDivBackground.jpg");
   width: 100%;
 }
 
@@ -509,7 +509,7 @@ h4 {
   border-radius: 8px;
   padding: 10px;
   border-style: inset;
-  background-image: url("../public/imageDivBackground.jpg");
+  background-image: url("/imageDivBackground.jpg");
 }
 
 .eachStockResult div {
